2003-05-30  Mark Page <mpagenva@aol.com>

	* nsd/tclthread.c: fix problem in ns_thread begindetached api.
        This code was failing to create the new thread as detached.
        Also corrected for the Ns_TclDetachedThread C api.  As a
        result of this change, non-detached threads will return their
        TclEval result to Ns_ThreadExit, making it available to a
        thread join.

2003-05-28  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_8
	
2003-05-28  Mark Page <mpagenva@aol.com>

	* nsd/tclimg.c: Use binary channel to read img (Thanks to Dossy).
        Eliminate double error string; Corrrect compiler warning on Seek.
        * tcl/form.c: Fix to ns_querygetall to suppress null sublists.  Also,
        make the defaulting semantics work as described.

2003-05-24  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/info.c: added workaround for Tcl_GetMemoryInfo() which
	is not defined in Tcl if somebody undefines USE_THREAD_ALLOC.
	Generally, this call should be avoided altogether.

	* nsd/tclinit.c: added call to Tcl_FinalizeThread() in the
	DeleteInterps() to properly finalize Tcl data on thread exit,
 	thus closing the re-appearing memory leak from V3.3 nsd.

2003-05-20  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_7
	
2003-05-20  Mark Page <mpagenva@aol.com>

	* nsd/tclimg.c: Addition error checks in gif size read.
        * nsd/adpcmds.c: Error check calls to ns_adp funcs.
        * nsd/tclinit.c: Error check calls to Ns_TclGetConn and Ns_TclServerInterp.

2003-05-19  Mark Page <mpagenva@aol.com>

	* nsd/tclinit.c: suppress byte-compile for interp init scripts
        * nsd/tclthread.c: fix fmr.

2003-05-16  Zoran Vasiljevic <zoran@archiware.com>

	* nsdb/dbinit.c: fixed hash table initialization in IncrCount
	to TCL_ONE_WORD_KEYS instead of TCL_STRING_KEYS. Credits to
	Jean-Fabrice RABAUTE for the bug report.

2003-05-14  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/tclthread.c: fixed NsTclCondObjCmd to be compatible